[gd_scene load_steps=2 format=3 uid="uid://ct3mx5t8a6pul"]

[ext_resource type="Script" path="res://Alien Attack/scripts/enemy_spawner.gd" id="1_unmkk"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_unmkk")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="spawnPos_01" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1340, 63)
gizmo_extents = 30.0

[node name="spawnPos_02" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1340, 180)
gizmo_extents = 30.0

[node name="spawnPos_03" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1340, 300)
gizmo_extents = 30.0

[node name="spawnPos_04" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1340, 420)
gizmo_extents = 30.0

[node name="spawnPos_05" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1340, 540)
gizmo_extents = 30.0

[node name="spawnPos_06" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1340, 660)
gizmo_extents = 30.0

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="EnemyContainer" type="Node" parent="."]

[node name="Timer2" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
